--- a/NetworkTest/app/src/main/res/layout/activity_main.xml
+++ b/NetworkTest/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
     <TextView
-        android:id="@+id/textView"
-        android:hint="@string/app_name"
+        android:id="@+id/textView1"
+        android:hint="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="50dp"/>
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
+    <TextView
+        android:hint="2"
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
 </LinearLayout>
