--- a/Connect/app/src/main/res/layout/activity_tel.xml
+++ b/Connect/app/src/main/res/layout/activity_tel.xml
@@ -1,64 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.connect.mql.connect.TelActivity">
-    <LinearLayout
-        android:background="#D0A61A"
-        android:padding="20dp"
+    android:fitsSystemWindows="true">
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-        <TextView
-            android:id="@+id/tname"
-            android:textSize="30sp"
-            android:textColor="#040202"
-            android:layout_gravity="bottom|left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:padding="10dp"
-        android:layout_height="80dp"
-        style="?android:listSeparatorTextViewStyle">
-        <TextView
-            android:text="联系方式"
-            android:textSize="15sp"
-            android:layout_gravity="left|top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/ttel"
-            android:textSize="25sp"
-            android:textColor="#040202"
-            android:gravity="left|bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
-    <Button
-        android:id="@+id/message"
-        android:text="短信"
-        android:layout_margin="10dp"
-        android:background="#D0CF49"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"/>
-    <Button
-        android:id="@+id/telyes"
-        android:text="拨号"
-        android:layout_margin="10dp"
-        android:background="#D0CF49"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"/>
-     </LinearLayout>
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+        <!--
+        collapsingToolbarLayout专门给ToolBar使用的
+        app:layout_scrollFlags="scroll"属性就直接配置在collapsingToolbarLayout上面;toolbar和子控件就不再配置了
+        exitUntilCollapsed：不管滑动列表到哪只要向上拉，这个View会跟着滑动直到折叠，配合android：minHeight属性使用，最小高度即为折叠后的高度
+        app:contentScrim="@color/colorPrimary" 用于指定在趋于折叠状态以及折叠之后的背景色
+        -->
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/toolbarlayout"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            <!--
+            加入一个ImageView就能搭配app:contentScrim="@color/colorPrimary"实现渐变效果
+            如果imageview放到toolbar下面就会把toolbar覆盖掉，根节点是collapsingToolbarLayout
+            app:layout_collapseMode="none"默认效果，随父控件一起滑动；
+            app:layout_collapseMode="pin"缩放模式，在滚动的时候Toolbar不跟着走；
+            app:layout_collapseMode="parallax"视察效果，随父控件进行高度缩放
+            -->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:background="@drawable/header"
+                app:layout_collapseMode="parallax"/>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toobar"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                app:layout_collapseMode="pin"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
 
-</LinearLayout>
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:padding="5dp"
+                android:layout_height="70dp"
+                style="?android:listSeparatorTextViewStyle">
+                <TextView
+                    android:text="联系方式"
+                    android:textSize="15sp"
+                    android:layout_gravity="left|top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/ttel"
+                    android:textSize="18sp"
+                    android:textColor="#040202"
+                    android:gravity="left|bottom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="70dp">
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+                    <Button
+                        android:id="@+id/message"
+                        android:text="短信"
+                        android:background="@drawable/msg"
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+                    <Button
+                        android:id="@+id/telyes"
+                        android:text="拨号"
+                        android:background="@drawable/tel"
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
+
