--- a/Connect/app/src/main/res/layout/content_item.xml
+++ b/Connect/app/src/main/res/layout/content_item.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:padding="5dp"
-              android:background="#FFFBF0"
-              android:layout_height="60dp"
-              style="?android:listSeparatorTextViewStyle"
-              >
-        <TextView
-            android:id="@+id/name"
-            android:layout_gravity="left"
-            android:gravity="center_vertical"
-            android:textSize="25sp"
-            android:textColor="#040202"
-            android:layout_weight="1"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:id="@+id/tel"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:textColor="#040202"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-</LinearLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:id="@+id/item_lay"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:padding="5dp"
+            android:background="#FFFFFF"
+            style="?android:listSeparatorTextViewStyle">
+        <FrameLayout
+            android:layout_width="45dp"
+            android:layout_height="45dp">
+                <ImageView
+                    android:id="@+id/item_image"
+                    android:layout_gravity="center"
+                    android:background="@drawable/item_img_bg"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"/>
+                <TextView
+                    android:textSize="28sp"
+                    android:id="@+id/item_img_tx"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+        </FrameLayout>
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_gravity="left"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="16dp"
+                    android:textSize="22sp"
+                    android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/tel"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+        </LinearLayout>
+
+
