--- a/Connect/app/src/main/res/menu/addgroup.xml
+++ b/Connect/app/src/main/res/menu/addgroup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/group"
-          android:title="群组"
+    <item android:id="@+id/addgroup"
+          android:title="创建"
           app:showAsAction="always"/>
 </menu>
