--- a/Connect/app/src/main/res/values/dimens.xml
+++ b/Connect/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="divider_height">1dp</dimen>
     <dimen name="sectioned_top">32dp</dimen>
+    <dimen name="letter">20dp</dimen>
 </resources>
